# ospab.os-v2

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTIONS.md  CONTRIBUTIONS_ru.md  Cargo.toml  LICENSE  README.md  README_ru.md  ROADMAP.md  build.rs  build.sh  limine.conf  linker.ld  ospab.os.docx  ospab.os.md  review.md  rustc-ice-2026-02-28T17_55_32-482.txt  rustc-ice-2026-02-28T17_56_02-355.txt  rustc-ice-2026-02-28T17_57_05-644.txt  tech-manifest.md  x86_64-ospab.json
.cargo/: config.toml
.github/: copilot-instructions.md
aam/: inference.rs  mod.rs  tokenizer.rs  weights.rs
api/: mod.rs
api/ospab_ai/: trait.rs
api/posix/: trait.rs
arch/: mod.rs
arch/x86_64/: apic.rs  fbconsole.rs  font.rs  framebuffer.rs  gdt.rs  gdt_simple.rs  idt.rs  init.rs  init_new.rs  keyboard.rs  mem.rs  mod.rs  panic.rs  pic.rs  serial.rs  tsc.rs  vga.rs
core/: mod.rs
core/capability/: mod.rs  trait.rs
core/ipc/: mod.rs  trait.rs
core/scheduler/: mod.rs  trait.rs
drivers/: ahci.rs  ata.rs  block.rs  gpt.rs  mod.rs  nvme.rs
executive/: mod.rs
hpc/: mod.rs
limine-10.8.2/: .typos.toml  ChangeLog  GNUmakefile  bootstrap  config.h  config.status  configure  timestamps
mm/: heap.rs  mod.rs
net/: arp.rs  diag.rs  dns.rs  e1000.rs  icmp.rs  ipv4.rs  mod.rs  resolver.rs  rtl8139.rs  rtl8169.rs  sntp.rs  tcp.rs  trait.rs  udp.rs
src/: boot_log.rs  console.rs  doom.rs  installer.rs  klog.rs  lib.rs  logger.rs  main.rs  pci.rs  print.rs  shell.rs  terminal.rs  terminal_old.rs  ui.rs  version.rs
vfs/: aeternafs.rs  disk_sync.rs  mod.rs  ramfs.rs  trait.rs
(+334 files in other folders)
